- Implement Giphy API - Load Gifs on scroll - Implement Search bar - Add "Powered by Giphy"

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1720,6 +1720,7 @@
     "%(seconds)ss left": "%(seconds)ss left",
     "Send voice message": "Send voice message",
     "Emoji": "Emoji",
+    "Gif": "Gif",
     "Hide stickers": "Hide stickers",
     "Sticker": "Sticker",
     "Voice Message": "Voice Message",
