--- a/src/i18n/strings/en_US.json
+++ b/src/i18n/strings/en_US.json
@@ -53,6 +53,7 @@
     "Email": "Email",
     "Email address": "Email address",
     "Emoji": "Emoji",
+    "Gif": "Gif",
     "Error": "Error",
     "Error decrypting attachment": "Error decrypting attachment",
     "Export": "Export",
