Improve reply preview aesthetics

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1770,7 +1770,7 @@
     "Seen by %(count)s people|one": "Seen by %(count)s person",
     "Read receipts": "Read receipts",
     "Recently viewed": "Recently viewed",
-    "Replying": "Replying",
+    "Reply to": "Reply to",
     "Room %(name)s": "Room %(name)s",
     "Recently visited rooms": "Recently visited rooms",
     "No recently visited rooms": "No recently visited rooms",
