feat: update translations

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2393,18 +2393,14 @@
     "You are not allowed to view this server's rooms list": "You are not allowed to view this server's rooms list",
     "Can't find this server or its room list": "Can't find this server or its room list",
     "Your server": "Your server",
-    "Are you sure you want to remove <b>%(serverName)s</b>": "Are you sure you want to remove <b>%(serverName)s</b>",
-    "Remove server": "Remove server",
     "Matrix": "Matrix",
+    "Remove server “%(roomServer)s”": "Remove server “%(roomServer)s”",
     "Add a new server": "Add a new server",
     "Enter the name of a new server you want to explore.": "Enter the name of a new server you want to explore.",
     "Server name": "Server name",
-    "Add a new server...": "Add a new server...",
-    "%(networkName)s rooms": "%(networkName)s rooms",
-    "Matrix rooms": "Matrix rooms",
-    "Remove server “%(roomServer)s”": "Remove server “%(roomServer)s”",
     "Add new server…": "Add new server…",
     "Show: %(instance)s rooms (%(server)s)": "Show: %(instance)s rooms (%(server)s)",
+    "Show: Matrix rooms": "Show: Matrix rooms",
     "Add existing space": "Add existing space",
     "Want to add a new space instead?": "Want to add a new space instead?",
     "Create a new space": "Create a new space",
