Add AppTile tests

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2251,8 +2251,8 @@
     "Loading...": "Loading...",
     "Error loading Widget": "Error loading Widget",
     "Error - Mixed content": "Error - Mixed content",
-    "Minimise to room info": "Minimise to room info",
-    "Minimise to top": "Minimise to top",
+    "Un-maximise": "Un-maximise",
+    "Minimise": "Minimise",
     "Popout widget": "Popout widget",
     "Copy": "Copy",
     "Share entire screen": "Share entire screen",
