fix: implement changes requested by design

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -2806,7 +2806,8 @@
     "Allow this widget to verify your identity": "Allow this widget to verify your identity",
     "The widget will verify your user ID, but won't be able to perform actions for you:": "The widget will verify your user ID, but won't be able to perform actions for you:",
     "Remember this": "Remember this",
-    "%(members)s Members": "%(members)s Members",
+    "%(count)s Members|other": "%(count)s Members",
+    "%(count)s Members|one": "%(count)s Member",
     "Use \"%(query)s\" to search": "Use \"%(query)s\" to search",
     "Other searches": "Other searches",
     "Public rooms": "Public rooms",
