Redo decryption failure bar with headline/body layout

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1667,10 +1667,15 @@
     "Remove %(phone)s?": "Remove %(phone)s?",
     "A text message has been sent to +%(msisdn)s. Please enter the verification code it contains.": "A text message has been sent to +%(msisdn)s. Please enter the verification code it contains.",
     "Phone Number": "Phone Number",
-    "Verify this device to access all messages.": "Verify this device to access all messages.",
-    "Requesting keys from other devices. ": "Requesting keys from other devices. ",
-    "Opening one of your other devices may help.": "Opening one of your other devices may help.",
-    "Some of the messages in this room could not be decrypted. ": "Some of the messages in this room could not be decrypted. ",
+    "Verify this device to access all messages": "Verify this device to access all messages",
+    "This device was unable to decrypt some messages because it has not been verified yet.": "This device was unable to decrypt some messages because it has not been verified yet.",
+    "Reset your keys to prevent future decryption errors": "Reset your keys to prevent future decryption errors",
+    "You will not be able to access old undecryptable messages, but resetting your keys will allow you to receive new messages. You may need to re-verify your identity with your contacts.": "You will not be able to access old undecryptable messages, but resetting your keys will allow you to receive new messages. You may need to re-verify your identity with your contacts.",
+    "Open another device to load encrypted messages": "Open another device to load encrypted messages",
+    "This device is requesting keys from your other devices to access messages it was unable to decrypt. Opening one of your other devices may help this device retrieve keys more quickly.": "This device is requesting keys from your other devices to access messages it was unable to decrypt. Opening one of your other devices may help this device retrieve keys more quickly.",
+    "View your device list": "View your device list",
+    "Requesting keys to decrypt messages...": "Requesting keys to decrypt messages...",
+    "Some messages could not be decrypted. This device is requesting keys from the messages' senders.": "Some messages could not be decrypted. This device is requesting keys from the messages' senders.",
     "This user has not verified all of their sessions.": "This user has not verified all of their sessions.",
     "You have not verified this user.": "You have not verified this user.",
     "You have verified this user. This user has verified all of their sessions.": "You have verified this user. This user has verified all of their sessions.",
