--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1712,12 +1712,12 @@
     "Send message": "Send message",
     "Reply to encrypted thread…": "Reply to encrypted thread…",
     "Reply to thread…": "Reply to thread…",
-    "Send an encrypted reply…": "Send an encrypted reply…",
-    "Send a reply…": "Send a reply…",
-    "Send an encrypted message…": "Send an encrypted message…",
-    "Send a message…": "Send a message…",
-    "The conversation continues here.": "The conversation continues here.",
+    "Send encrypted reply…": "Send encrypted reply…",
+    "Send reply…": "Send reply…",
+    "Send encrypted message…": "Send encrypted message…",
+    "Send message…": "Send message…",
     "This room has been replaced and is no longer active.": "This room has been replaced and is no longer active.",
+    "The conversation continues here.": "The conversation continues here.",
     "You do not have permission to post to this room": "You do not have permission to post to this room",
     "%(seconds)ss left": "%(seconds)ss left",
     "Send voice message": "Send voice message",
