--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1670,9 +1670,9 @@
     "Verify this device to access all messages": "Verify this device to access all messages",
     "This device was unable to decrypt some messages because it has not been verified yet.": "This device was unable to decrypt some messages because it has not been verified yet.",
     "Reset your keys to prevent future decryption errors": "Reset your keys to prevent future decryption errors",
-    "You will not be able to access old undecryptable messages, but resetting your keys will allow you to receive new messages. You may need to re-verify your identity with your contacts.": "You will not be able to access old undecryptable messages, but resetting your keys will allow you to receive new messages. You may need to re-verify your identity with your contacts.",
+    "You will not be able to access old undecryptable messages, but resetting your keys will allow you to receive new messages.": "You will not be able to access old undecryptable messages, but resetting your keys will allow you to receive new messages.",
     "Open another device to load encrypted messages": "Open another device to load encrypted messages",
-    "This device is requesting keys from your other devices to access messages it was unable to decrypt. Opening one of your other devices may help this device retrieve keys more quickly.": "This device is requesting keys from your other devices to access messages it was unable to decrypt. Opening one of your other devices may help this device retrieve keys more quickly.",
+    "This device is requesting decryption keys from your other devices. Opening one of your other devices may speed this up.": "This device is requesting decryption keys from your other devices. Opening one of your other devices may speed this up.",
     "View your device list": "View your device list",
     "Requesting keys to decrypt messages...": "Requesting keys to decrypt messages...",
     "Some messages could not be decrypted. This device is requesting keys from the messages' senders.": "Some messages could not be decrypted. This device is requesting keys from the messages' senders.",
