Move `Presence` settings to the `Preferences` tab
Signed-off-by: Šimon Brandner <simon.bra.ag@gmail.com>

--- a/src/i18n/strings/en_EN.json
+++ b/src/i18n/strings/en_EN.json
@@ -1515,6 +1515,9 @@
     "Keyboard shortcuts": "Keyboard shortcuts",
     "To view all keyboard shortcuts, <a>click here</a>.": "To view all keyboard shortcuts, <a>click here</a>.",
     "Displaying time": "Displaying time",
+    "Presence": "Presence",
+    "Choose what real-time activity other users can see from you.": "Choose what real-time activity other users can see from you.",
+    "Your server doesn't support disabling read receipts": "Your server doesn't support disabling read receipts",
     "Composer": "Composer",
     "Code blocks": "Code blocks",
     "Images, GIFs and videos": "Images, GIFs and videos",
@@ -1532,12 +1535,10 @@
     "Cross-signing": "Cross-signing",
     "Your server admin has disabled end-to-end encryption by default in private rooms & Direct Messages.": "Your server admin has disabled end-to-end encryption by default in private rooms & Direct Messages.",
     "Okay": "Okay",
+    "Privacy": "Privacy",
     "Share anonymous data to help us identify issues. Nothing personal. No third parties.": "Share anonymous data to help us identify issues. Nothing personal. No third parties.",
     "Where you're signed in": "Where you're signed in",
     "Manage your signed-in devices below. A device's name is visible to people you communicate with.": "Manage your signed-in devices below. A device's name is visible to people you communicate with.",
-    "Privacy": "Privacy",
-    "Presence": "Presence",
-    "Your server doesn't support disabling read receipts": "Your server doesn't support disabling read receipts",
     "Sidebar": "Sidebar",
     "Spaces to show": "Spaces to show",
     "Spaces are ways to group rooms and people. Alongside the spaces you're in, you can use some pre-built ones too.": "Spaces are ways to group rooms and people. Alongside the spaces you're in, you can use some pre-built ones too.",
